--- a/kic/home/static/scss/menu.scss
+++ b/kic/home/static/scss/menu.scss
@@ -17,6 +17,8 @@
         min-width: 80px;
         .nav-link {
           text-decoration: none;
+          font-family: "Nunito", sans-serif;
+          font-weight: 100;
         }
       }
     }
