--- a/kic/home/templates/home/welcome_page.html
+++ b/kic/home/templates/home/welcome_page.html
@@ -1,76 +1,8 @@
 {% load i18n wagtailcore_tags %}
 {% load static %}
-<div class="top-header">
-  <div class="d-flex flex-row">
-    <div class="col-md-3">
-      <a href="">
-        support@kidsincharge.sc.ok
-      </a>
-    </div>
-    <div class="socio-media float-right col-md-9">
-      <ul>
-        <li>
-          <a href="">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-instagram-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
+{% include 'includes/header.html' %}
 <div class="">
   <div class="d-flex flex-column">
-    <header class="header flex-row">
-      <div class="logo">
-        <a href="https://wagtail.io/">
-          <img class="figure-logo ml-5" src="{% static 'images/kidsincharge.jpg' %}" alt="">
-        </a>
-      </div>
-      <div class="menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">About us <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
-              </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li> -->
-            </ul>
-          </div>
-        </nav>
-      </div>
-
-    </header>
     <main class="main">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -99,7 +31,7 @@
         </a>
       </div>
     </main>
-    <section class="about-section">
+    <section class="about-section" id="company">
       <div class="container section-header">
         <h3 class="section-heading">
           Core Values
@@ -150,9 +82,11 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora officia voluptatem velit porro aperiam
               accusantium modi, eligendi sunt fugiat.
             </p>
-            <button>
-              Inquire
-            </button>
+            <a href="contact-us">
+              <button>
+                Inquire
+              </button>
+            </a>
           </div>
           <div class="col-md-6">
             <img class="w-100" src="{% static 'images/illustrations/cardboard.png' %}" alt="">
@@ -266,112 +200,8 @@
         </div>
       </div>
     </section>
-    <section class="footer w-100">
-      <div class="top-footer">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-4">
-              <i class="far fa-envelope"></i>
-              <a href="#"> Email</a>
-              <a href="">email@kidsincharge.co.ke</a>
-            </div>
-            <div class="col-md-4">
-              <i class="fas fa-phone"></i>
-              <a href="#"> Call</a>
-              <a href="">0725 410486</a>
-            </div>
-            <div class="col-md-4">
-              <i class="fas fa-location-arrow"></i>
-              <a href="#"> Visit us</a>
-              <a href="">Rongai, Next to Tuskys.</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <footer class="footer" role="contentinfo">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <h4>
-                Quick Links
-              </h4>
-              <ul>
-                <li>
-                  <a href="">Home</a>
-                </li>
-                <li>
-                  <a href="">About Us</a>
-                </li>
-                <li>
-                  <a href="">Events</a>
-                </li>
-                <li>
-                  <a href="">Contact us</a>
-                </li>
-                <li>
-                  <a href="">Services</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3">
-              <h4>
 
-              </h4>
-              <ul>
-                <li>
-                  <a href="">Home</a>
-                </li>
-                <li>
-                  <a href="">About Us</a>
-                </li>
-                <li>
-                  <a href="">Events</a>
-                </li>
-                <li>
-                  <a href="">Contact us</a>
-                </li>
-                <li>
-                  <a href="">Services</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-6">
-              <img class="figure-logo d-block mb-5" src="{% static 'images/kidsincharge.jpg' %}" alt="">
-              <div class="socio-media col-md-9">
-                <ul>
-                  <li>
-                    <a href="">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <i class="fab fa-instagram-square"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-fluid">
-          <div>
-            <p class="text-center mt-3">
-              Copyright @ Template by Mfalme.
-            </p>
-          </div>
-        </div>
-      </footer>
-    </section>
+    {% include 'includes/footer.html' %}
+
   </div>
 </div>
