--- a/kic/home/templates/home/about_page.html
+++ b/kic/home/templates/home/about_page.html
@@ -47,40 +47,6 @@ Delete the line below if you're just getting started and want to remove the welc
 
 
 <section class="section-about-hero-2">
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-6 about-hero-2">
-                <div class="d-flex flex-row w-80">
-                    <h4 class="highlight">
-                        A
-                    </h4>
-                    <div class="flex-column">
-                        <h6 class="highlight-title">
-                            A story of our Founder
-                        </h6>
-                        <p class="highlight-descr pt-0">
-                            Know our story
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 about-hero-2">
-                <div class="d-flex flex-row w-80">
-                    <h4 class="highlight">
-                        A
-                    </h4>
-                    <div class="flex-column">
-                        <h6 class="highlight-title">
-                            A story of our Founder
-                        </h6>
-                        <p class="highlight-descr pt-0">
-                            Know our story
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <div class="container">
         <div class="flex-column">
 
@@ -150,7 +116,7 @@ Delete the line below if you're just getting started and want to remove the welc
                                         </p>
                                         <div class=" d-flex flex-row mt-5">
 
-                                            <div class="card" style="">
+                                            <div class="card">
                                                 <div class="card-body">
                                                     <div class="d-flex flex-row mb-3">
                                                         <i class="fas fa-school"></i>
@@ -171,7 +137,7 @@ Delete the line below if you're just getting started and want to remove the welc
 
                                                 </div>
                                             </div>
-                                            <div class="card" style="">
+                                            <div class="card">
                                                 <div class="card-body">
                                                     <div class="d-flex flex-row mb-3">
                                                         <i class="fas fa-school"></i>
@@ -225,7 +191,7 @@ Delete the line below if you're just getting started and want to remove the welc
                                         </p>
                                         <div class=" d-flex flex-row">
 
-                                            <div class="card" style="">
+                                            <div class="card">
                                                 <div class="card-body">
                                                     <div class="d-flex flex-row mb-3">
                                                         <i class="fas fa-school"></i>
@@ -246,7 +212,7 @@ Delete the line below if you're just getting started and want to remove the welc
 
                                                 </div>
                                             </div>
-                                            <div class="card" style="">
+                                            <div class="card">
                                                 <div class="card-body">
                                                     <div class="d-flex flex-row mb-3">
                                                         <i class="fas fa-school"></i>
