--- a/kic/contact/templates/contact_page.html
+++ b/kic/contact/templates/contact_page.html
@@ -49,7 +49,13 @@ Delete the line below if you're just getting started and want to remove the welc
         <div class="container">
             <div class="row">
                 <div class="col-md-8 contact-form-left">
+                    <form action="." method="POST">
+                        {% csrf_token %}
 
+                        {{ form.as_p }}
+
+                        <p><input type="submit" value="Suggest my flavour"></p>
+                    </form>
                 </div>
                 <div class="col-md-4 contact-form-right">
                     <h3>
