Contact us backend using Python Django.

--- a/kic/contact/templates/thankyou.html
+++ b/kic/contact/templates/thankyou.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
+{% load wagtailcore_tags %}
+
 
 {% block body_class %}template-thankyou{% endblock %}
 
 {% block content %}
-<h1>Thank you for your suggestion!</h1>
+<h1>{{page.thankyou_page_title | richtext}}</h1>
 
 <p>
     Thanks, {{ contact.name }}! <br>
