--- a/kic/home/templates/includes/nav.html
+++ b/kic/home/templates/includes/nav.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="/#company">Our values</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact-us">Contact us</a>
+                        <a class="nav-link" href="/contact">Contact us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Admin</a>
