--- a/kic/home/templates/home/welcome_page.html
+++ b/kic/home/templates/home/welcome_page.html
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-md-6">
             <h1>
-              Come learn, explore <br> and play with <br> Kids In Charge
+              Come learn, explore <br> and play with <br> Icanary
             </h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora officia voluptatem velit porro aperiam
@@ -97,7 +97,7 @@
     <section class="events-section">
       <div class="container section-header">
         <h3 class="section-heading text-center">
-          Kids In Charge Upcoming Events
+          Icanary Upcoming Events
         </h3>
       </div>
       <div class="container">
