--- a/kic/home/static/scss/common.scss
+++ b/kic/home/static/scss/common.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,700;1,200;1,300&family=Varela+Round&display=swap");
 
+$primary-color: #c34f22;
+
 a,
 a:hover {
   text-decoration: none;
