--- a/kic/home/static/scss/hero.scss
+++ b/kic/home/static/scss/hero.scss
@@ -138,7 +138,7 @@ section.footer {
     }
   }
   .footer {
-    background-color: #1b3b70;
+    background-color: #0e0e0e;
     color: #fff;
     padding: 30px 0;
     .figure-logo {
@@ -167,8 +167,8 @@ section.footer {
     display: inline-block;
     margin-right: 10px;
     i {
-      font-size: 25px;
-      color: rgba(255, 255, 255, 0.5);
+      font-size: 15px;
+      color: rgb(255, 255, 255);
       &:hover {
         color: rgba(255, 255, 255, 0.5);
       }
