--- a/kic/home/templates/includes/footer.html
+++ b/kic/home/templates/includes/footer.html
@@ -6,7 +6,7 @@
                 <div class="col-md-4">
                     <i class="far fa-envelope"></i>
                     <a href="#"> Email</a>
-                    <a href="">email@kidsincharge.co.ke</a>
+                    <a href="">email@Icanary.co.ke</a>
                 </div>
                 <div class="col-md-4">
                     <i class="fas fa-phone"></i>
@@ -69,7 +69,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <img class="figure-logo d-block mb-5" src="{% static 'images/kidsincharge.jpg' %}" alt="">
+                    <img class="figure-logo d-block mb-5" src="{% static 'images/Icanary.jpg' %}" alt="">
                     <div class="socio-media col-md-9">
                         <ul>
                             <li>
