--- a/kic/home/templates/includes/header.html
+++ b/kic/home/templates/includes/header.html
@@ -4,7 +4,9 @@
     <div class="d-flex flex-row">
         <div class="col-md-3">
             <a href="">
-                support@kidsincharge.sc.ok
+                <p>
+                    support@Icanary.sc.ok
+                </p>
             </a>
         </div>
         <div class="socio-media float-right col-md-9">
