--- a/kic/kic/templates/base.html
+++ b/kic/kic/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Kids In charge - Integrate with STEM
+        Icanary - Integrate with STEM
     </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
